<resources>

    <!-- Activities titles -->
    <string name="title_app_name">Cabalry</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_devices">Devices</string>
    <string name="title_activity_usermap">Map</string>
    <string name="title_activity_forgot">Forgot</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_recordings">Recordings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_billing">Billing</string>
    <string name="title_activity_userinfo">User Info</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_start_alarm">Starting Alarm</string>

    <!-- Strings for navigation drawer -->
    <string-array name="nav_drawer_array">
        <item>Profile</item>
        <item>Map</item>
        <item>Devices</item>
        <item>Settings</item>
        <item>Recordings</item>
        <item>History</item>
        <item>Billing</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_drawer_ic_array">
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_map</item>
        <item>@drawable/ic_devices</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_recordings</item>
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_billing</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_logout</item>
    </string-array>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="action_home">Home</string>
    <string name="action_nearby">Nearby</string>
    <string name="action_focus">Focus</string>
    <string name="action_settings">Settings</string>

    <string name="error_no_gplay">No valid Google Play Services APK found</string>

    <!-- Strings related to login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_login_short">Login</string>

    <string name="action_forgot">Forgot Username/Password</string>
    <string name="action_register">Register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least 6 characters long</string>
    <string name="error_incorrect_login">An error has occurred please check your login info</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_logout">An error occurred when logging out, please try again</string>

    <!--  DeviceListActivity -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="msg_scanning">Scanning for devices...</string>
    <string name="msg_none_paired">No devices have been paired</string>
    <string name="msg_none_found">No devices found</string>
    <string name="action_select_device">Select a device to connect</string>
    <string name="action_scan">Scan for devices</string>

    <!--  For web views -->
    <string name="msg_loading">Loading...</string>

    <string name="error_no_network">Please re-connect to the internet.</string>
    <string name="prompt_no_gps">This app cannot function properly without GPS, do you want to enable it?</string>
    <string name="error_wrong_password">Wrong password please try again</string>


    <string name="action_enter">Scan for devices</string>
    <string name="action_cancel">Scan for devices</string>

    <!--  For alarm -->
    <string name="prompt_ignore">Are you sure you want to ignore alarm?</string>
    <string name="error_billing">Cannot start alarm please check your billing</string>

    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="prompt_ok">Ok</string>
    <string name="prompt_cancel">Cancel</string>

    <string name="prompt_password">Please enter your password</string>
    <string name="prompt_alarm_title">Cabalry Alarm</string>
    <string name="prompt_alarm">An alarm has been triggered! ID = </string>

    <!--  For bluetooth -->
    <string name="device_state">Device Status :</string>
    <string name="device_charge">Device Charge :</string>

    <string name="msg_not_connected">Not Connected</string>
    <string name="msg_connecting">Connecting …</string>
    <string name="msg_connected">Connected</string>

    <string name="action_bluetooth">Devices</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="no_device_name">No Device</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">Not found</string>

    <!--  For history -->
    <string name="no_history">There is no alarm history</string>
    <string name="action_clear_history">Clear History</string>
    <string name="error_alarm_inactive">Can\'t open alarm. The alarm is inactive</string>

</resources>
