<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#6A1010"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="#6A1010">
        <ImageView
                android:layout_width="203dp"
                android:layout_height="81dp"
            android:background="@drawable/ic_text_logo"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"/>
        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:id="@+id/user"
                android:inputType="textEmailAddress"
                android:minHeight="40dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="end"
                android:hint="@string/prompt_email"
                android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:id="@+id/password"
                android:minHeight="40dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="end"
                android:hint="@string/prompt_password"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                android:text="@string/action_login"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:padding="5dp"
                android:layout_marginBottom="20dp"
                android:background="#ff411815"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/action_forgot"
                      android:textColor="#FFFFFF"
                      android:id="@+id/forgot"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:text="@string/action_register"
                      android:textColor="#FFFFFF"
                      android:id="@+id/register"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
